// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot for full width button 1`] = `
<div>
  <button
    class="py-[7px] px-[30px] rounded-3xl transition-all duration-200 font-bold bg-primary text-white hover:bg-white hover:text-bodyText border-2 border-primary w-full "
  >
    Full Width Button
  </button>
</div>
`;

exports[`Button matches snapshot for primary button 1`] = `
<div>
  <button
    class="py-[7px] px-[30px] rounded-3xl transition-all duration-200 font-bold bg-primary text-white hover:bg-white hover:text-bodyText border-2 border-primary w-auto "
  >
    Primary Button
  </button>
</div>
`;

exports[`Button matches snapshot for secondary button 1`] = `
<div>
  <button
    class="py-[7px] px-[30px] rounded-3xl transition-all duration-200 font-bold bg-white text-bodyText hover:bg-primary hover:text-white border-2 border-primary w-auto "
  >
    Secondary Button
  </button>
</div>
`;
